--- a/src/app/shared/error-page/error-page.component.html
+++ b/src/app/shared/error-page/error-page.component.html
@@ -2,10 +2,10 @@
 
 <ul>
   <li>
-    <a routerLink="auth/login">Ir a Login</a>
+    <a routerLink="/auth/login">Ir a Login</a>
   </li>
   <li>
-    <a routerLink="auth/registro">Ir a Registro</a>
+    <a routerLink="/auth/registro">Ir a Registro</a>
   </li>
   <li>
     <a routerLink="/heroes/listado">Ir a Listado Heroes</a>
